--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,7 @@ spring:
     username: admin
     password:
   jpa:
+    defer-datasource-initialization: true
     show-sql: true
     hibernate:
       naming:
